--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <title></title>
 </head>
 <body>
-    
-    
-
+    <header>ARULAFLIX</header>
+    <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+     <P>#homem-aranha</P>
 
 </body>
 </html>
